--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
 
     <title>Finna-Eat</title>
+    <script src="https://d3saea0ftg7bjt.cloudfront.net/embed/js/embed.min.js"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
