--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 
     <!-- Material-UI -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" /> 
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
 
